# RobotGame

./: CMakeLists.txt  block.cpp  block.h  buttonblock.cpp  buttonblock.h  diodeblock.cpp  diodeblock.h  inputstate.h  main.cpp  map.cpp  map.h  mapblock.cpp  mapblock.h  motorblock.cpp  motorblock.h  port.h  programmableblock.cpp  programmableblock.h  radarblock.cpp  radarblock.h  robot.cpp  robot.h  robotgame.cpp  robotgame.h  spritemanager.cpp  spritemanager.h  state.h  uistate.cpp  uistate.h
assets/maps/: map.lua  map.tmx.old  tiles.tsx
assets/scripts/: example.lua  mapmanager.lua
assets/sprites/: button.ase  button_pressed.ase  code_block.ase  default_big_block.ase  default_block.ase  diode_off.ase  diode_on.ase  motor.ase  radar.ase  screen.aseprite  screenpalette.aseprite
examples/: basic.lua  blink.lua  details.lua  mapradar.lua  objectives.lua  screencolors.lua
pge/: imgui_impl_pge.h  olcPixelGameEngine.h
